2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Test if ompi_comm_free exists instead of
	ompi_comm_create which doesn't exist in OpenMPI 1.3.

	* configure.ac: Pass variables to be substituted one-by-one to
	AC_SUBST.

2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac (OPTIONAL_UTILS): New variable.  Add viewevents
	conditionally depending on existence of GL/glut.h.

2008-10-16  Mikael Djurfeldt  <mikael@moritz-heliass-macbook.local>

	* configure.ac: Use $CXX instead of $MPI_CXX in tests for
	configuration of MPI implementation dependent code.

2008-09-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Setup MPI_C; Test for MPI::Init_thread.

2007-11-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Don't try to build shared libraries on BGL.

	* autogen.sh, aclocal.sh: Suppress error messages from which.

2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Rewritten to make better use of AC_PROG_CXX; Logic
	added to manage subdirectory rudeconfig directly (tests moved from
	original rudeconfig configure.ac).

2007-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Test for ompi_comm_create (used to identify
	OPENMPI); Moved configuration of rudeconfig to beginning.

	* Makefile.am (SUBDIRS): Added rudeconfig.

2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Added AC_CONFIG_SUBDIRS(rudeconfig).
					 
	* rudeconfig: Added.

2007-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Added test for rts_get_personality; Generate
	utils/Makefile.

	* Makefile.am (SUBDIRS): Added utils.

2007-10-18  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Introduced guessing of host MPI framework. Handle
	openmpi version of mpiCC.

2007-09-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* AUTHORS, COPYING, INSTALL, NEWS, README, ChangeLog,
	configure.ac, Makefile.am, autogen.sh, aclocal.sh: New files